--- a/charts/core-services/mailbot/Chart.yaml
+++ b/charts/core-services/mailbot/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: chatbot
+name: mailbot
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
