--- a/charts/core-services/Chart.yaml
+++ b/charts/core-services/Chart.yaml
@@ -8,6 +8,8 @@ dependencies:
   - name: audit-service
     version: 0.1.0
     repository: "file://audit-service"
+    files:
+#      - name: "file://../common/env.yaml"
 
   - name: egov-localization
     version: 0.1.0
